# osg-android-studio

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Projects/android/: settings.gradle
Projects/android/OpenSceneGraphApp/: CMakeLists.txt  build.gradle
Projects/android/OpenSceneGraphApp/src/main/: AndroidManifest.xml
Projects/android/OpenSceneGraphApp/src/main/cpp/: JNIMain.cpp  OpenSceneGraphAppMain.h  OpenSceneGraphNative.cpp
Projects/android/OpenSceneGraphApp/src/main/java/com/android/osg/: OSGJNIActivity.java  OSGJNILib.java  OSGJNIView.java
Projects/android/OpenSceneGraphApp/src/main/res/values/: strings.xml
